fixed ADMIN spacing and added red color

--- a/app/assets/stylesheets/discovery.scss
+++ b/app/assets/stylesheets/discovery.scss
@@ -114,3 +114,9 @@
   margin-top: 23px;
   padding: 9px 10px !important;
 }
+
+.navbar-text {
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+  color: #f00 !important;
+}
